force-app/main/default/objects/Case/fields/Additional_Part__c.field-meta.xml
<CustomField>
    <fullName>Additional_Part__c</fullName>
    <label>Additional Part</label>
    <type>TextArea</type>
</CustomField>