force-app/main/default/objects/Case/fields/Address_Account__c.field-meta.xml
<CustomField>
    <fullName>Address_Account__c</fullName>
    <formula>Account.Address_Full__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Account</label>
    <type>Text</type>
</CustomField>