force-app/main/default/objects/Case/fields/Asset_Of_Account__c.field-meta.xml
<CustomField>
    <fullName>Asset_Of_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Of Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Account_Customer__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>