force-app/main/default/objects/Case/fields/Assign_to_CS_Date__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_CS_Date__c</fullName>
    <label>Assign to CS Date</label>
    <type>DateTime</type>
</CustomField>