force-app/main/default/objects/Case/fields/Belongs_to__c.field-meta.xml
<CustomField>
    <fullName>Belongs_to__c</fullName>
    <label>Belongs to</label>
    <length>100</length>
    <type>Text</type>
</CustomField>