force-app/main/default/objects/Case/fields/Borrow_From__c.field-meta.xml
<CustomField>
    <fullName>Borrow_From__c</fullName>
    <label>Borrow From</label>
    <type>Date</type>
</CustomField>