force-app/main/default/objects/Case/fields/Borrow_To__c.field-meta.xml
<CustomField>
    <fullName>Borrow_To__c</fullName>
    <label>Borrow To</label>
    <type>Date</type>
</CustomField>