force-app/main/default/objects/Case/fields/Bought_From__c.field-meta.xml
<CustomField>
    <fullName>Bought_From__c</fullName>
    <formula>Asset_Of_Account__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bought From</label>
    <type>Text</type>
</CustomField>