force-app/main/default/objects/Case/fields/Bought_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Bought_Quantity__c</fullName>
    <formula>Asset_Of_Account__r.Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bought Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>