force-app/main/default/objects/Case/fields/Case_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Case_Overdue__c</fullName>
    <formula>IF(
    TODAY() - DATEVALUE(CreatedDate) &gt; 3,
    true,
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Overdue</label>
    <type>Checkbox</type>
</CustomField>