force-app/main/default/objects/Case/fields/Chanel_Receive__c.field-meta.xml
<CustomField>
    <fullName>Chanel_Receive__c</fullName>
    <label>Chanel Receive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotline</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Web-form</fullName>
            </value>
            <value>
                <fullName>Trực tiếp</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>