force-app/main/default/objects/Case/fields/Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date__c</fullName>
    <label>Closing Date</label>
    <type>DateTime</type>
</CustomField>