force-app/main/default/objects/Case/fields/Complaint_Details__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Details__c</fullName>
    <label>Details Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>