force-app/main/default/objects/Case/fields/Create_Task_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Task_Time__c</fullName>
    <label>Create Task Time</label>
    <type>DateTime</type>
</CustomField>