force-app/main/default/objects/Case/fields/Current_Motorbike__c.field-meta.xml
<CustomField>
    <fullName>Current_Motorbike__c</fullName>
    <formula>Asset_Of_Account__r.Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Motorbike</label>
    <type>Text</type>
</CustomField>