force-app/main/default/objects/Case/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer Comments</label>
    <length>100768</length>
    <type>LongTextArea</type>
</CustomField>