force-app/main/default/objects/Case/fields/Customer_Feedbacks__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedbacks__c</fullName>
    <label>Customer Feedbacks</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>