force-app/main/default/objects/Case/fields/Customer_Review__c.field-meta.xml
<CustomField>
    <fullName>Customer_Review__c</fullName>
    <label>Customer Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KH rất hài lòng</fullName>
            </value>
            <value>
                <fullName>KH hài lòng</fullName>
            </value>
            <value>
                <fullName>KH hoàn toàn chưa hài lòng</fullName>
            </value>
            <value>
                <fullName>KH chưa hài lòng lắm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>