force-app/main/default/objects/Case/fields/Description_Details_Part__c.field-meta.xml
<CustomField>
    <fullName>Description_Details_Part__c</fullName>
    <label>Description Details Part</label>
    <type>TextArea</type>
</CustomField>