force-app/main/default/objects/Case/fields/Details_Case__c.field-meta.xml
<CustomField>
    <fullName>Details_Case__c</fullName>
    <label>Details Case</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Request__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Products (Motorcycle)</fullName>
            </value>
            <value>
                <fullName>Products (A&amp;A)</fullName>
            </value>
            <value>
                <fullName>Quality of Services</fullName>
            </value>
            <value>
                <fullName>First time complaint</fullName>
            </value>
            <value>
                <fullName>Serial complaint</fullName>
            </value>
            <value>
                <fullName>Multi-media complaint (Facebook, Chat box)</fullName>
            </value>
            <value>
                <fullName>Delivery time</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Lack of Follow-ups</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Test 1</fullName>
                <isActive>false</isActive>
                <label>Test 1</label>
            </value>
            <value>
                <fullName>Test 2</fullName>
                <isActive>false</isActive>
                <label>Test 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>