force-app/main/default/objects/Case/fields/DO_DL__c.field-meta.xml
<CustomField>
    <fullName>DO_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DO/DL</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>