force-app/main/default/objects/Case/fields/DO_DLR__c.field-meta.xml
<CustomField>
    <fullName>DO_DLR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DO/DLR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>