force-app/main/default/objects/Case/fields/Estimate_Case__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Case__c</fullName>
    <label>Estimate Case</label>
    <type>DateTime</type>
</CustomField>