force-app/main/default/objects/Case/fields/Estimate_Time_With_Status_1St_Ressigned__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Time_With_Status_1St_Ressigned__c</fullName>
    <label>Estimate Time With Status 1St Ressigned</label>
    <type>DateTime</type>
</CustomField>