force-app/main/default/objects/Case/fields/EstimateTime_Case__c.field-meta.xml
<CustomField>
    <fullName>EstimateTime_Case__c</fullName>
    <label>EstimateTime  Case</label>
    <type>DateTime</type>
</CustomField>