force-app/main/default/objects/Case/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handler</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>