force-app/main/default/objects/Case/fields/Handling_Note__c.field-meta.xml
<CustomField>
    <fullName>Handling_Note__c</fullName>
    <label>Handling Note</label>
    <type>TextArea</type>
</CustomField>