force-app/main/default/objects/Case/fields/Handling_Notes__c.field-meta.xml
<CustomField>
    <fullName>Handling_Notes__c</fullName>
    <label>Handling Notes</label>
    <type>TextArea</type>
</CustomField>