force-app/main/default/objects/Case/fields/Handling_Time__c.field-meta.xml
<CustomField>
    <fullName>Handling_Time__c</fullName>
    <formula>(ClosedDate -  CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handling Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>