force-app/main/default/objects/Case/fields/Is_Send__c.field-meta.xml
<CustomField>
    <fullName>Is_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Send</label>
    <type>Checkbox</type>
</CustomField>