force-app/main/default/objects/Case/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <formula>Account.Occupation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupation</label>
    <type>Text</type>
</CustomField>