force-app/main/default/objects/Case/fields/PCA_Sup__c.field-meta.xml
<CustomField>
    <fullName>PCA_Sup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PCA Sup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>