force-app/main/default/objects/Case/fields/Priority_Graphic__c.field-meta.xml
<CustomField>
    <fullName>Priority_Graphic__c</fullName>
    <formula>IMAGE 
( 
 IF(ISPICKVAL(Status,&quot;1st Case Reassigned&quot;) &amp;&amp; Estimate_Time_With_Status_1St_Ressigned__c &lt; Now() &amp;&amp; Estimate_Case__c &gt; 
    Now(),
   &quot;/img/samples/color_yellow.gif&quot;, 
     IF(NOT(ISPICKVAL(Status,&quot;1st Case Reassigned&quot;)) &amp;&amp; Estimate_Case__c &lt; Now(),
       &quot;/img/samples/color_red.gif&quot;, 
        IF(ISPICKVAL(Status,&quot;1st Case Reassigned&quot;) &amp;&amp; Estimate_Case__c &lt; Now() &amp;&amp; Estimate_Case__c &lt; Now(),
           &quot;/img/samples/color_red.gif&quot;, 
          &quot;/s.gif&quot;
        )  
     ) 
 ),
&quot;&quot;, 17, 100 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Graphic</label>
    <type>Text</type>
</CustomField>