force-app/main/default/objects/Case/fields/Quality_Control__c.field-meta.xml
<CustomField>
    <fullName>Quality_Control__c</fullName>
    <label>Quality Control</label>
    <length>100</length>
    <type>Text</type>
</CustomField>