force-app/main/default/objects/Case/fields/Refurn_Date__c.field-meta.xml
<CustomField>
    <fullName>Refurn_Date__c</fullName>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>