force-app/main/default/objects/Case/fields/Related_Department__c.field-meta.xml
<CustomField>
    <fullName>Related_Department__c</fullName>
    <label>Related Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>