force-app/main/default/objects/Case/fields/Send_CS_Staff__c.field-meta.xml
<CustomField>
    <fullName>Send_CS_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Notified Overall</label>
    <type>Checkbox</type>
</CustomField>