force-app/main/default/objects/Case/fields/Showroom__c.field-meta.xml
<CustomField>
    <fullName>Showroom__c</fullName>
    <label>Showroom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hà Nội</fullName>
            </value>
            <value>
                <fullName>Hồ Chí Minh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>