force-app/main/default/objects/Case/fields/Time_Available__c.field-meta.xml
<CustomField>
    <fullName>Time_Available__c</fullName>
    <label>Time Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>