force-app/main/default/objects/Case/fields/Type_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_Request__c</fullName>
    <label>Type Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Xe</fullName>
            </value>
            <value>
                <fullName>Phụ tùng</fullName>
            </value>
            <value>
                <fullName>Trang phục, phụ kiện</fullName>
            </value>
            <value>
                <fullName>Dịch vụ</fullName>
            </value>
            <value>
                <fullName>Khiếu nại</fullName>
            </value>
            <value>
                <fullName>Khác</fullName>
            </value>
            <value>
                <fullName>Góp ý</fullName>
                <isActive>false</isActive>
                <label>Góp ý</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>