force-app/main/default/objects/Case/fields/Typical_Problems__c.field-meta.xml
<CustomField>
    <fullName>Typical_Problems__c</fullName>
    <label>Typical Problem</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>