force-app/main/default/objects/Case/fields/Way_to_solve__c.field-meta.xml
<CustomField>
    <fullName>Way_to_solve__c</fullName>
    <label>Way to solve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Satisfaction Achieved</fullName>
            </value>
            <value>
                <fullName>In implementation</fullName>
            </value>
            <value>
                <fullName>No satisfaction achieved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>