force-app/main/default/objects/Case/recordTypes/Borrow_Part.recordType-meta.xml
<RecordType>
    <fullName>Borrow_Part</fullName>
    <active>true</active>
    <businessProcess>Borrow</businessProcess>
    <label>Borrow Part</label>
</RecordType>