force-app/main/default/objects/Case/validationRules/Validate_Change_Stage_to_Implementation.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Change_Stage_to_Implementation</fullName>
    <active>true</active>
    <description>Khi chuyển stage sang stage Implementation, phải chọn Way to solve= &apos;In implementation&apos;</description>
    <errorConditionFormula>IF(ISCHANGED(Status),
IF(AND(ISPICKVAL(Status,&apos;Implementation&apos;), NOT(ISPICKVAL(Way_to_solve__c,&apos;In implementation&apos;))), TRUE,
FALSE),FALSE)</errorConditionFormula>
    <errorMessage>You must choose Way to solve as &apos;In implementation&apos; to change to this Status</errorMessage>
</ValidationRule>