force-app/main/default/objects/Case/listViews/Case_Overdue.listView-meta.xml
<ListView>
    <fullName>Case_Overdue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>1st Case Reassigned,2nd Case Reassigned,Implementation</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Case</value>
    </filters>
    <filters>
        <field>Case_Overdue__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Case Overdue</label>
</ListView>